--- a/cv.tex
+++ b/cv.tex
@@ -48,33 +48,38 @@
          }}                                                                                                                         \\
       \textit{Nationality  } & New Zealander          & \textit{Email  } & edward.linscott@epfl.ch                                  \\
       \textit{Date of birth} & 26/11/1991             & \textit{Phone} & +41 79 678 9641 \\
-      & & \textit{Website} & \href{https://elinscott.github.io/}{elinscott.github.io}
+      \multicolumn{4}{X}{
+         \includegraphics[height=0.7em]{favicons/icons8-google-scholar-192-trimmed.png} \href{https://scholar.google.co.uk/citations?user=4_ejng0AAAAJ}{Google Scholar}
+         \quad \quad \includegraphics[height=0.7em]{favicons/icons8-github-240-trimmed.png} \href{https://github.com/elinscott}{GitHub}
+         \quad \quad \includegraphics[height=0.7em]{favicons/icons8-user-90-trimmed.png} \href{https://elinscott.github.io/}{Personal Website}
+         \quad \quad \includegraphics[height=0.7em]{favicons/icons8-twitter-240-trimmed.png} \href{https://twitter.com/ed_linscott}{Twitter}}
    \end{tabularx}
    \end{minipage}
    }
 
 \begin{tabularx}{\textwidth}{X}
    \cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Summary}} \\
-   I am currently a postdoctoral researcher at EPFL in the group of Prof.\ Nicola Marzari. Career highlights thus far include...
-   \vspace{6pt}
-
-   -- Successful undergraduate studies culminating in receiving (a) the \textit{Prince of Wales Award} for the most outstanding student completing an undergraduate degree at the University of Otago, and (b) the \textit{Cambridge-Rutherford Memorial Scholarship} to enable doctoral studies at the University of Cambridge.
-   \vspace{6pt}
-
-   -- Completing a masters and PhD at the University of Cambridge, during which I developed methods and code associated with DFT+\emph{U} and dynamical mean field theory.
-    This work has continued during my postdoc with the development of the BLOR functional and a high-throughput study of Hubbard and Hunds parameters.
-   \vspace{6pt}
-
-   -- Developing and releasing the \href{https://koopmans-functionals.org/}{koopmans} code, a package that implements Koopmans functionals. I am the lead author of this code. The ``Advanced Quantum ESPRESSO tutorial: Hubbard and Koopmans functionals from linear response'' in late 2022 covered the use of this code, and had over 200 attendees. % By imposing a generalized piecewise energy condition, these functionals obtain spectral properties with comparable accuracy to GW at a fraction of the computational cost.
-   \vspace{6pt}
-
-   -- Supervising Yannick Schubert for his master's project and thesis. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career''.
-   \vspace{6pt}
-
-   Broadly, my research investigates how we can improve the performance of density functional theory (DFT). Taking inspiration from known properties of the exact functional and our knowledge of the systemic errors of DFT, I (and others) have shown how we can construct inexpensive corrections to DFT that drastically improve its performance.
+   I am currently a postdoctoral researcher at EPFL in the group of Prof.\ Nicola Marzari. Broadly, my research investigates how we can improve the performance of density functional theory (DFT). Taking inspiration from known properties of the exact functional and our knowledge of the systemic errors of DFT, I (and others) have shown how we can construct inexpensive corrections to DFT that drastically improve its performance.
 
    \vspace{6pt}
    I am now looking for further opportunities where I can apply my expertise in density functional approximation development and my coding skills to develop the next generation of state-of-the-art methods for computational quantum chemistry and materials science.
+   
+   \vspace{6pt}
+   Career highlights thus far include...
+   \vspace{6pt}
+
+   -- Receiving (a) the \textit{Prince of Wales Award} for the most outstanding student completing an undergraduate degree at the University of Otago, and (b) the \textit{Cambridge-Rutherford Memorial Scholarship} to enable doctoral studies at the University of Cambridge.
+   \vspace{6pt}
+
+   -- Completing a masters and PhD at the University of Cambridge, during which I developed methods and code associated with DFT+\emph{U} and dynamical mean field theory.
+    This work has continued during my postdoc with the development of the BLOR functional and a high-throughput study of Hubbard and Hund's parameters.
+   \vspace{6pt}
+
+   -- Developing and releasing the \href{https://koopmans-functionals.org/}{koopmans} code, a package that implements Koopmans functionals. I am the lead author of this code. The ``Advanced Quantum ESPRESSO tutorial: Hubbard and Koopmans functionals from linear response'' tutorial in late 2022 covered the use of this code, and had over 200 attendees. % By imposing a generalized piecewise energy condition, these functionals obtain spectral properties with comparable accuracy to GW at a fraction of the computational cost.
+   \vspace{6pt}
+
+   -- Supervising Yannick Schubert's master's project and thesis. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career''.
+   \vspace{6pt}
 \end{tabularx}%
 \setlength{\fboxsep}{5pt}%
 \setlength{\fboxrule}{0pt}%
@@ -273,24 +278,24 @@
       \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} 
    %}
    \\
-   A.\,Burgess, EBL, D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. arXiv:2210.17404 (2022)
+   A.\,Burgess, \textbf{EBL}, D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. arXiv:2210.17404 (2022)
    \\
-   G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, EBL, D.\,D.\,O'Regan, K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
-   N.\,Colonna, R.\,De Gennaro, EBL, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ %&                                                 \\
-   R.\,De Gennaro, N.\,Colonna, EBL, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % & 1 citation                                      \\
+   G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
+   N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ %&                                                 \\
+   R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % & 1 citation                                      \\
    % 
-   H.\,Lee, C.\,Weber, and EBL, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
+   H.\,Lee, C.\,Weber, and \textbf{EBL}, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
    % 
    % 
-   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, EBL, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021)                                                                                                                                                                                                                                                                                                                                                                   \\ %& 8 citations                                     \\
+   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, \textbf{EBL}, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021)                                                                                                                                                                                                                                                                                                                                                                   \\ %& 8 citations                                     \\
    % 
-   EBL, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           \\ %& 5 citations                                     \\
-   S.\,M.\ Masur, EBL, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 3 citations                                     \\
-   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, EBL, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 \\ %& 73 citations                                    \\
-   M.\,A.\,al-Badri, EBL, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ %& 7 citations                                     \\
-   C.\,J.\,Edgcombe, S.\,M.\,Masur, EBL, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 14 citations                                    \\
-   EBL, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \\ %& 33 citations                                    \\
-   EBL and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ % & 9 citations; selected as an Editors' Suggestion
+   \textbf{EBL}, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           \\ %& 5 citations                                     \\
+   S.\,M.\ Masur, \textbf{EBL}, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 3 citations                                     \\
+   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, \textbf{EBL}, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 \\ %& 73 citations                                    \\
+   M.\,A.\,al-Badri, \textbf{EBL}, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ %& 7 citations                                     \\
+   C.\,J.\,Edgcombe, S.\,M.\,Masur, \textbf{EBL}, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 14 citations                                    \\
+   \textbf{EBL}, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \\ %& 33 citations                                    \\
+   \textbf{EBL} and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ % & 9 citations; selected as an Editors' Suggestion
 \end{tabularx}
 
 \begin{tabularx}{\textwidth}{
